# datasette-auth-tokens

./: .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
datasette_auth_tokens/: __init__.py  migrations.py  utils.py  views.py
datasette_auth_tokens/templates/: create_api_token.html  token_details.html  tokens_index.html
tests/: test_auth_tokens.py  test_managed_tokens.py  test_migrations.py
