[project]
name = "datasette-auth-tokens"
version = "0.4a11"
description = "Datasette plugin for authenticating access using API tokens"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a25",
    "sqlite-utils",
    "sqlite-migrate",
]

[project.urls]
Homepage = "https://github.com/simonw/datasette-auth-tokens"
Issues = "https://github.com/simonw/datasette-auth-tokens/issues"
CI = "https://github.com/simonw/datasette-auth-tokens/actions"
Changelog = "https://github.com/simonw/datasette-auth-tokens/releases"

[project.entry-points.datasette]
auth_tokens = "datasette_auth_tokens"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio",
    "httpx",
    "sqlite-utils",
    "datasette-test",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
